/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.3.1/samples
 */

plugins {
  id 'java'
  id 'io.freefair.lombok' version '6.3.0'
  id 'com.github.johnrengelman.shadow' version '5.2.0'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
  implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
  testImplementation(platform('org.junit:junit-bom:5.8.2'))
  testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')

  annotationProcessor "org.projectlombok:lombok:1.18.22"
  testAnnotationProcessor "org.projectlombok:lombok:1.18.22"
}

repositories {
	mavenCentral()
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
    showStandardStreams = false
	}
}


apply plugin: 'application'
apply plugin: 'java'

mainClassName = 'app.run.App'

jar {
  manifest {
    attributes 'Main-Class': 'app.run.App'
  }
}


// sourceSets {
    // main {
    //     java {
    //         srcDirs = ['src/main/java']
    //     }
    //     resources {
    //         srcDirs = ['src/main/resources']
    //     }
    // }
    // test {
    //   java {
    //     srcDirs = ['src/test/java']
    //   }
    // }
// }
